objects/SVMXC__Product_Serial__c.object
<CustomObject>
    <fields>
        <fullName>SMAX_PS_BatchNum__c</fullName>
        <label>Batch Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SMAX_PS_LastTxnNum__c</fullName>
        <label>Last Transaction Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SerialNum__c</fullName>
        <label>Serial Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_VS_Is_Allocated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate that stock serial is allocated</description>
        <inlineHelpText>Field to indicate that stock serial is allocated</inlineHelpText>
        <label>Is Allocated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_VS_Product_Tracking__c</fullName>
        <formula>TEXT(SVMXC__Product__r.SVMXC__Tracking__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Tracking</label>
        <type>Text</type>
    </fields>
</CustomObject>